        necessarly inside the same gallery).
- NEW : [picture id="10" caption="none|alttext|desc" float="|left|right" 
            width="" height="" mode="|watermark|web20"]extra caption here[/picture]
        shortcode. You can now insert single picture with some effect, resized or not, 
        with or without caption.
- Changed : Move update message to admin.php
- Changed : Widgets are now core and doesn't need to be activate, rework as Multi Widgets		
- Changed : Improved the gallery management page.
- Changed : Renammed the filter 'ngg_create_gallery_thumbcode' to 'ngg_get_thumbcode'.
- Changed : Convert tags to WP-Taxonomy tables, no more need for ngg_tags, ngg_pic2tags
- Changed : Arrange manage fields in a new way
- Changed : Support now SSL 
- Changed : Use JQuery UI instead of interface lib
- Changed : Updated to swfobject 2.1
- Bugfix : Changed CSS for singlepic padding to margin
- Bugfix : Check for zero in Exif Focal Length
- Bugfix : Round instead inval for square thumbnails
- Removed : Do not longer check for myGallery folders
- Removed : Use now PclZip from WP Core
- Removed : Wordpress 2.1 - 2.3 files deleted

V0.99 - 27.09.2008
- Changed : Included swfobject version 2.1 
- Bugfix : Recognize the zip better
- Bugfix : Limit the length of the title in the media-upload
- Bugfix : Round instead inval for square thumbnails

V0.98 - 15.07.2008
- Bugfix : Removed all whitespaces at EOF

V0.97 - 10.07.2008
- Changed : Get new path contstant from WP2.6
- Changed : Minor updates for WP2.6
- Changed : Added new filters (THX to Vincent Prat) 
- Removed : Revert singlepic wrapper, breaks validation

V0.96 - 18.05.2008
- Changed : Use postbox for gallery settings 
- Added : New filter function to add custom columns
- Bugfix : Fixed width for Thickbox in Manage gallery
- Bugfix : fixed width for media upload select box
- Bugfix : Remove <p> tag in singlepic regex
- Bugfix : Correct format of shutter speed 
- Bugfix : Album name in Short code not useable  
